Updates on made on 2017-08-07
* FPC Changes *

r36854 | pierre
Use REPE prefix instead of REP before CMPS{B,W,L} instruction (wasm generates an error for REP)
r36855 | pierre
Partial fix for symbian rtl Makefile problems
r36856 | pierre
Set EXEEXT to SRCEXEEXT if NoNativeBinaries is set (allow snapshot of jvm-java on linux)
r36857 | pierre
Fix singlezipinstall for systems that set NoNativeBinaries to 1

* Lazarus Changes *

r55640 | wp
grids: Undo publishing of TDrawGrid.CellHintPriority (compilation issues).
r55641 | juha
AnchorDocking: Add a minide example project with AnchorDockPanel. Issue #24703, by Andrey Zubarev.
r55642 | joost
* llProgres -> llProgress, fixes compilation
r55643 | maxim
Opkman: regenerated translations and updated Russian translation

--- a/fpc/compiler/Makefile
+++ b/fpc/compiler/Makefile
@@ -572,6 +572,10 @@ endif
 ifeq ($(OS_TARGET),win16)
 NoNativeBinaries=1
 endif
+ifeq ($(NoNativeBinaries),1)
+override EXEEXT=$(SRCEXEEXT)
+CROSSINSTALL=1
+endif
 ifeq ($(FULL_TARGET),i386-linux)
 override TARGET_DIRS+=utils
 endif
