--- a/fpc/compiler/Makefile.fpc
+++ b/fpc/compiler/Makefile.fpc
@@ -349,6 +349,13 @@ ifeq ($(OS_TARGET),win16)
 NoNativeBinaries=1
 endif
 
+# Allow install for jvm 
+ifeq ($(NoNativeBinaries),1)
+override EXEEXT=$(SRCEXEEXT)
+# In those cases, installation in a cross-installation
+CROSSINSTALL=1
+endif
+
 [rules]
 #####################################################################
 # Setup Targets
