--- a/lazarus/ide/lazarus.lpi
+++ b/lazarus/ide/lazarus.lpi
@@ -599,6 +599,7 @@
         <ComponentName Value="MacroListView"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <UnitName Value="EditorMacroListViewer"/>
       </Unit86>
       <Unit87>
         <Filename Value="sourcesyneditor.pas"/>
@@ -798,7 +799,10 @@
       <Unit124>
         <Filename Value="codetemplatesdlg.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="CodeTemplateDialog"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="CodeTemplatesDlg"/>
       </Unit124>
       <Unit125>
         <Filename Value="mainintf.pas"/>
@@ -1032,7 +1036,10 @@
       <Unit174>
         <Filename Value="publishprojectdlg.pas"/>
         <IsPartOfProject Value="True"/>
+        <ComponentName Value="PublishProjectDialog"/>
         <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="PublishProjectDlg"/>
       </Unit174>
       <Unit175>
         <Filename Value="findoverloadsdlg.pas"/>
